--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.12.0",
+    "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "flatpickr": "^4.6.13",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
